silent: Set AM_DEFAULT_VERBOSITY for compatibility on older automake
Custom silent rules will become recursive on older automake where
AM_SILENT_RULES is not included. Set AM_DEFAULT_VERBOSITY in this
fallback case for compatibility.

Signed-off-by: Dan Nicholson <dbn.lists@gmail.com>
Reviewed-by: Gaetan Nadon <memsize@videotron.ca>

--- a/xorg-macros.m4.in
+++ b/xorg-macros.m4.in
@@ -935,7 +935,8 @@ XORG_RELEASE_VERSION
 XORG_CHANGELOG
 XORG_INSTALL
 XORG_MANPAGE_SECTIONS
-m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])],
+    [AC_SUBST([AM_DEFAULT_VERBOSITY], [1])])
 ]) # XORG_DEFAULT_OPTIONS
 
 # XORG_INSTALL()
